# breast-cancer-classifier

./: .gitignore  README.md  SETUP.md  pyproject.toml  repo_structure.md  repo_workflow.md
.github/: issue_template.yaml  pull_request_template.md
data/processed/: .gitkeep
data/raw/: .gitkeep
experiments/: .gitkeep
models/: .gitkeep
notebooks/: .gitkeep  01_eda.ipynb  02_model_comparison.ipynb  02_modelling.ipynb  03_SMV_and_RF.ipynb  baseline_results.csv  preprocessing.ipynb  test_fncs.ipynb
notebooks/experiments/: rf_threshold_results.csv
notebooks/exploration/: 04_LR.ipynb
reports/: .gitkeep
results/models/: model_metrics.csv  model_parameters.csv  model_summary.csv
src/: .gitkeep  compare.py  data_preprocessing.py  evaluate.py  evaluation.py  generate_tree.py  modelling.py  pipelines.py  preprocessing.py  train.py  tune.py  visualization.py
src/utils/: PROJECT_STRUCTURE.md  generate_tree.py  repo_structure.md
