[project]
name = "wdbc-env"
version = "0.1.0"
description = "Wisconsin Diagnostic Breast Cancer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
