[project]
name = "wdbc-env"
version = "0.1.0"
description = "Wisconsin Diagnostic Breast Cancer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "nbconvert>=7.17.0",
    "plotly>=6.3.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.2",
    "ucimlrepo>=0.0.7"
]
